--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div>
     <h1>Laokeng Vang</h1>
-    <p> Motivated and passionate individual 
+    <p> Motivated and passionate individual ready to explore new fields and expand my knowledge
   </div> 
   
   <div class="exp-header">
