--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <ul>
       <li>Maintained and tracked equipment for company from Ft. Bliss, Texas to Djibouti, Africa</li>
       <li>Supported missions outside main base by providing food, water and transportation to US Soldiers</li>
-      <li>Ensured all company equipment was accounted for throughout the deployment with monthly inventories</li>
+      <li>Ensured all company equipment was accounted for throughout the deployment by conducting monthly inventories</li>
+      <li>Supported other companies and task forces (including different branches of the military) with supplies</li>
     </ul>
  </div>
   
